# weather_repository_pattern

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/weather_repository_pattern/: __init__.py  main.py  models.py  pandas_repository.py  polars_repository.py  repository.py  weather_data.json  weather_summary.py
